tests/syntax_error/bad_addressof.jou
def foo() -> int*:
    return &1  # Error: expected a variable name, got an integer
